# combo-app

./: .dockerignore  .gitignore  Dockerfile  README.md  agents.md  compose.yml
apps/expenses/: Dockerfile  README.md  index.html  info  package-lock.json  pyproject.toml  service-worker.js
apps/expenses/docs/: OPERATIONS_GUIDE.md
apps/expenses/fsi_expenses_web/: __init__.py  config.py  database.py  forms.py  repositories.py  services.py  shared_models.py
apps/expenses/fsi_expenses_web/blueprints/: __init__.py  reports.py
apps/expenses/fsi_expenses_web/static/css/: site.css
apps/expenses/fsi_expenses_web/templates/: base.html
apps/expenses/fsi_expenses_web/templates/reports/: detail.html  index.html  new.html  preview.html
apps/expenses/k8s/: deployment.yaml  service.yaml
apps/expenses/server/: package-lock.json  package.json
apps/expenses/server/prisma/: schema.prisma
apps/expenses/server/prisma/migrations/20251002195938_init/: migration.sql
apps/expenses/server/prisma/migrations/20251010120000_receipts/: migration.sql
apps/expenses/server/prisma/migrations/20251015120000_approvals/: migration.sql
apps/expenses/server/src/: index.ts
apps/expenses/server/src/middleware/: adminAuth.ts
apps/expenses/server/src/routes/: adminApprovals.ts  adminReports.ts
apps/expenses/src/: config.js  main.js  storage.js
apps/expenses/tests/: adminApi.test.ts  conftest.py  reportPayload.test.js  test_forms.py  test_repository.py  test_routes.py
expenses/: Dockerfile  README.md  admin.html  manifest.webmanifest  package-lock.json  package.json  styles.css
(+264 files in other folders)
