[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsi-expenses-web"
version = "0.1.0"
description = "Freight Services expense report builder"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Freight Services Inc." }]
dependencies = [
  "Flask>=2.3,<3.0",
  "python-dateutil>=2.8",
  "SQLAlchemy>=2.0",
  "Werkzeug>=2.3",
]

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "pytest>=7.0",
  "pytest-flask>=1.3",
  "ruff>=0.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["fsi_expenses_web*", "packages*"]

[tool.setuptools.package-data]
fsi_expenses_web = ["templates/**/*.html", "static/**/*"]
